methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:4: error: not found: type color
                    def faireW(c:color){avance();setCouleurBrosse(c);baisseBrosse();leveBrosse();gauche();avance();droite();avance();baisseBrosse();leveBrosse();droite;avance();gauche();avance()}
                                 ^